Fixed homepage scrollbar.

--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -9,6 +9,7 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 15px !important;
 	padding-top: 80px; //Same height as the navbar
+	overflow-x:hidden;
 }
 
 //BUTTON STYLING
