--- a/client/src/styles/homepage/singleBlock.scss
+++ b/client/src/styles/homepage/singleBlock.scss
@@ -8,7 +8,7 @@
 		background-size: cover;
 		background-position: center right;
 		padding: 50px 50px;
-		min-height: calc(100vh - 132px);
+		min-height: calc(100vh - 150px);
 		@media screen and(max-width: $responsiveBreakPoint){
 			padding: 10vh 20px;
 			min-height: auto;
